--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -11,7 +11,14 @@
     <input type="text" name="searchAContest" value="@ViewBag.searchStringValue" placeholder="Search a contest"  style="border:1px solid #ddd;margin-top:10px">
     <button type="submit">Submit</button>
 }
-
+@if (User.IsInRole("Admin"))
+{
+    <link href="~/Styles/AdminIndexResponsive.css" type="text/css" rel="stylesheet" />
+}
+else if (User.IsInRole("Judge"))
+{
+    <link href="~/Styles/JudgeIndexResponsive.css" type="text/css" rel="stylesheet" />
+}
 
 @if (ViewBag.searchStringValue == "")
 {
@@ -22,7 +29,7 @@ else
     <h2>Result for: @ViewBag.searchStringValue</h2>
 }
 
-<div class="dropdown" style="margin-top:10px;margin-bottom:10px;float:right">
+<div class="dropdown" id="sortButton" style="margin-top:10px;margin-bottom:10px;float:right">
     Sort: <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="sortMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         @ViewBag.sortStringValue
         <span class="caret"></span>
@@ -35,33 +42,35 @@ else
 </div>
 
 
-<table class="table">
-    <tr>
-        <th>
-           @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th>
-          @Html.DisplayNameFor(model => model.StartTime)
-        </th>
-        <th></th>
-    </tr>
+<table>
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Location)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartTime)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.Name, "contest", new { contestId = item.Id })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Location)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartTime)
+                </td>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink(item.Name, "contest", new { contestId=item.Id })          
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartTime)
-        </td>
-       
-    </tr>
-}
-
+            </tr>
+        }
+    </tbody>
 </table>
