Participant/index and participant/contest pagination.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model PagedList.IPagedList<Riipen_SSD.Contest>
+﻿@model PagedList.IPagedList<Riipen_SSD.Contest>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
