--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
+﻿@*@model IEnumerable<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>*@
+@model PagedList.IPagedList<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "contest";
@@ -41,29 +44,29 @@ else
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.TeamID)
+            @Html.DisplayNameFor(model => model.First().TeamID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContestID)
+            @Html.DisplayNameFor(model => model.First().ContestID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TeamName)
+            @Html.DisplayNameFor(model => model.First().TeamName)
         </th>
 
         <th>
             @if (!User.IsInRole("Admin"))
             {
-                @Html.DisplayNameFor(model => model.YourCurrentScore)
+                @Html.DisplayNameFor(model => model.First().YourCurrentScore)
             }
             
 
         </th>
         <th>
 
-            @Html.DisplayNameFor(model => model.FinalScore)
+            @Html.DisplayNameFor(model => model.First().FinalScore)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.JudgeNotSubmitted)
+            @Html.DisplayNameFor(model => model.First().JudgeNotSubmitted)
         </th>
         <th></th>
     </tr>
@@ -128,3 +131,9 @@ else
 }
 
 </table>
+
+
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, contestID = ViewBag.contestId, searchATeam = ViewBag.searchATeam, sortTeams = ViewBag.sortTeams }))
+    <span class="page-number">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount </span>
