--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
+﻿@*@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>*@
+@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Contests";
@@ -56,16 +59,16 @@ else
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.TeamID)
+            @Html.DisplayNameFor(model => model.First().TeamID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TeamName)
+            @Html.DisplayNameFor(model => model.First().TeamName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Score)
+            @Html.DisplayNameFor(model => model.First().Score)
         </th>
         <th>
-         @Html.DisplayNameFor(model => model.JudgeNotSubmitted)
+         @Html.DisplayNameFor(model => model.First().JudgeNotSubmitted)
         </th>
         <th></th>
     </tr>
@@ -109,3 +112,9 @@ else
 }
 
 </table>
+
+
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, contestID = ViewBag.contestId, searchATeam = ViewBag.searchATeam, sortTeams = ViewBag.sortTeams }))
+    <span class="page-number">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount </span>
