--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
+﻿@*@model IEnumerable<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>*@
+@model PagedList.IPagedList<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "contest";
@@ -50,28 +53,28 @@ else
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TeamID)
+                @Html.DisplayNameFor(model => model.First().TeamID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ContestID)
+                @Html.DisplayNameFor(model => model.First().ContestID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TeamName)
+                @Html.DisplayNameFor(model => model.First().TeamName)
             </th>
 
             
                 @if (!User.IsInRole("Admin"))
             {   <th>
-                    @Html.DisplayNameFor(model => model.YourCurrentScore)
+                    @Html.DisplayNameFor(model => model.First().YourCurrentScore)
             </th>
                 }
             
             <th>
 
-                @Html.DisplayNameFor(model => model.FinalScore)
+                @Html.DisplayNameFor(model => model.First().FinalScore)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.JudgeNotSubmitted)
+                @Html.DisplayNameFor(model => model.First().JudgeNotSubmitted)
             </th>
             @if (User.IsInRole("Judge"))
             {
@@ -157,3 +160,8 @@ else
 }
         </tbody>
 </table>
+
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
+    <span class="page-number">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount </span>
