--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
@@ -1,9 +1,10 @@
-﻿body {
+﻿    @import url(http://fonts.googleapis.com/css?family=Roboto);
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 
-    @import url(http://fonts.googleapis.com/css?family=Karla);
-	font-family: 'Roboto', 'Helvetica Nueue', sans-serif;
+
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -26,4 +27,7 @@ textarea {
     max-width: 280px;
 }
 
+.title { 
+	font-family: 'Roboto', 'Helvetica Nueue', sans-serif;
+}
 	
