--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -24,7 +24,7 @@ else if (User.IsInRole("Judge"))
 
 @if (ViewBag.searchStringValue == "")
 {
-    <h2>All contests</h2>
+    <h2 class="title">All contests</h2>
 }
 else
 {
