Added more responsiveness to overflowing tables

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -111,7 +111,7 @@
                 <td>
                     @Html.DisplayFor(x => item.Name)
                 </td>
-                <td>
+                <td prewrap>
                     @Html.DisplayFor(x => item.Email)
                 </td>
             </tr>
