Put login information onto the login page

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
@@ -34,7 +34,22 @@
                             @Html.LabelFor(m => m.RememberMe)
                         </div>
                     </div>
-                </div>
+                </div>           
+                 <div class="row">
+                <p>
+                    Admin account: adminaccount@gmail.com <br />
+                </p>
+                <p>
+                    Judge accounts: andrewstec@hotmail.com password: Pa$$w0rd <br />
+                    andrewhui@gmail.com    Password: Pa$$w0rd
+                </p>
+                <p>
+                    Participant account: mario@hotmail.com, Password : Pa$$w0rd <br />
+                    jackiechan@gmail.com    Password: Pa$$w0rd
+
+                </p>
+
+            </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
