--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
@@ -29,5 +29,49 @@ textarea {
 
 .title { 
 	font-family: 'Roboto', 'Helvetica Nueue', sans-serif;
+    display: inline-block;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
-	
+
+
+
+
+
+
+/*judge pages*/
+
+.PageDiv{
+    margin-top:20px;
+}
+
+.searchForm {
+    margin-top:20px;
+}
+
+.searchForm input{
+    width:200px;
+    border:1px solid #ddd;
+    padding:2px;
+}
+
+.btn-submit{
+    background-color:#3F8ABF;
+    color:white;
+    border:0px;
+    padding:5px 10px;
+}
+
+.btn-save{
+    background-color:#F68632;
+    color:white;
+    border:0px;
+    padding:5px 10px;
+}
+
+.judge-team-score{
+    font-size:20px;
+    margin-top:20px;
+    margin-bottom:30px;
+}
