--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -7,12 +7,6 @@
 
 }
 
-@using (Html.BeginForm("Index", "Judge", FormMethod.Get))
-{
-    @Html.AntiForgeryToken()
-    <input type="text" name="searchAContest" value="@ViewBag.searchStringValue" placeholder="Search a contest"  style="border:1px solid #ddd;margin-top:10px">
-    <button type="submit">Submit</button>
-}
 @if (User.IsInRole("Admin"))
 {
     <link href="~/Styles/AdminIndexResponsive.css" type="text/css" rel="stylesheet" />
@@ -22,14 +16,16 @@ else if (User.IsInRole("Judge"))
     <link href="~/Styles/JudgeIndexResponsive.css" type="text/css" rel="stylesheet" />
 }
 
-@if (ViewBag.searchStringValue == "")
-{
-    <h2 class="title">All contests</h2>
-}
-else
-{
-    <h2>Result for: @ViewBag.searchStringValue</h2>
-}
+<div class="searchForm">
+    @using (Html.BeginForm("Index", "Judge", FormMethod.Get))
+    {
+        @Html.AntiForgeryToken()
+        <input type="text" name="searchAContest" value="@ViewBag.searchStringValue" placeholder="Search a contest" style="border:1px solid #ddd;margin-top:10px">
+        <button type="submit" class="btn-submit">Submit</button>
+    }
+</div>
+
+
 
 <div class="dropdown" id="sortButton" style="margin-top:10px;margin-bottom:10px;float:right">
     Sort: <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="sortMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -43,7 +39,14 @@ else
     </ul>
 </div>
 
-
+@if (ViewBag.searchStringValue == "")
+{
+    <div class="title">All contests</div>
+}
+else
+{
+    <div class="title">Result for: @ViewBag.searchStringValue</div>
+}
 <table>
     <thead>
     <tr>
@@ -76,8 +79,8 @@ else
 }
     </tbody>
 </table>
-
+<div class="PageDiv">
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
     @Html.PagedListPager(Model, page => Url.Action("Index",
 new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
-    <span class="page-number">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount </span>
+</div>
