--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -11,20 +11,19 @@
 }
 
 <div>
-  
-    @if (ViewBag.TeamName != null)
-    {
-       <span>Team: </span> @ViewBag.TeamName <br />
-    }
+    <div class="judge-team-score">
+        @if (ViewBag.TeamName != null)
+        {
+            <span>Team: </span> @ViewBag.TeamName <br />
+        }
 
-    @if (ViewBag.ContestName != null)
-    {
-    <span>Contest: </span>    @ViewBag.ContestName;
-    }
-   
-    <br />
+        @if (ViewBag.ContestName != null)
+        {
+            <span>Contest: </span>    @ViewBag.ContestName;
+        }
+    </div>
     <div class="yourScoreDiv">
-        <span style="font-weight:bold">Total Score: </span><span class="yourScore"></span>
+        <span>Total Score: </span><span class="yourScore"></span>
     </div>
 
     <form class="form" method="post" action="EditCriteriaScore">
@@ -137,8 +136,8 @@
           
 
         </div>
-        <input name="SubmitOrSave" type="submit" value="Save"/>
-        <input name="SubmitOrSave" type="submit" value="Submit"/>
+        <input class="btn-save" name="SubmitOrSave" type="submit" value="Save"/>
+        <input class="btn-submit" name="SubmitOrSave" type="submit" value="Submit"/>
     </form>
 </div>
 
